--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
 env:
   global:
     - JRUBY_OPTS="-J-Xmx1024M --debug"
-    - CODECLIMATE_REPO_TOKEN=549c22f4e2db072df829fc14ceaef0ac4db510d2896bff73517d4feb17a7d6cd
+#    - CODECLIMATE_REPO_TOKEN=549c22f4e2db072df829fc14ceaef0ac4db510d2896bff73517d4feb17a7d6cd
     
 script: 
   - RAILS_ENV=test bundle exec rake db:migrate --trace
@@ -16,6 +16,6 @@ matrix:
   allow_failures:
     - rvm: 1.9.3
   fast_finish: true
-addons:
-  code_climate:
-    repo_token: 549c22f4e2db072df829fc14ceaef0ac4db510d2896bff73517d4feb17a7d6cd
+#addons:
+#  code_climate:
+#    repo_token: 549c22f4e2db072df829fc14ceaef0ac4db510d2896bff73517d4feb17a7d6cd
